This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2024-10-23:

- Fixed a bug in multidimensional indexed array assignments where unquoted
  values that corresponded to reserved words (such as 'if' or 'select')
  incorrectly caused a syntax error. For example,
    my_array=((somevalue) select) && typeset -p my_array
  now works as expected. This bug was introduced in ksh 93r+ 2006-06-30.

2024-08-28:

- Fixed a crash that occurred for an arithmetic 'for' that has two instead of
  three ';'-separated expressions. The expected syntax error is now given.

2024-08-26:

- Fixed an infinite loop that occurred when a syntax error was thrown
  for an arithmetic 'for' loop on the interactive command line.

2024-08-22:

- Fixed: command lines containing certain specific kinds of syntax error
  were not entered into the shell's history for retrieval and correction.

2024-08-21:

- Fixed a corner-case crashing bug in shell discipline functions.

2024-08-19:

- Fixed a corner-case bug: for an empty set of positional parameters,
  "$@$@" would generate one empty field instead of zero fields like "$@".

2024-08-01:

- Release 1.0.10 -- exactly two years after 1.0.0 and twelve years after 93u+.

2024-07-31:

- Fixed a bug where printf %T, after having printed the time in UTC once
  with the TZ variable set to "UTC", would always print the time in UTC from
  then on, even if the TZ variable was changed to another time zone.
  Bug introduced in ksh 93t+ 2009-10-21.

2024-07-26:

- Fixed a regression where a broken pipe signal (SIGPIPE), when occurring in
  a pipe construct within a subshell, caused incorrect signal handling in the
  parent/main shell, in some cases causing a script to abort. Bug introduced
  on 2022-07-02.

- Fixed a bug in the pipefail shell option where the status of a signalled