@@ -220,7 +220,6 @@ static Init_t		*nv_init(void);
 #if SHOPT_STATS
 static void		stat_init(void);
 #endif
-static int		shlvl;
 static int		rand_shift;
 
 /*
@@ -1352,7 +1351,7 @@ Shell_t *sh_init(int argc,char *argv[], Shinit_f userinit)
 		nv_putval(ENVNOD,sfstruse(sh.strbuf),NV_RDONLY);
 	}
 	/* increase SHLVL */
-	shlvl++;
+	sh.shlvl++;
 #if SHOPT_SPAWN
 	{
 		/*
@@ -1672,7 +1671,7 @@ void sh_reinit(void)
 	else
 		env_import_attributes(env_init());
 	/* Increase SHLVL */
-	shlvl++;
+	sh.shlvl++;
 	/* call user init function, if any */
 	if(sh.userinit)
 		(*sh.userinit)(&sh, 1);
@@ -1804,7 +1803,7 @@ static Init_t *nv_init(void)
 	sh.nvfun.last = (char*)&sh;
 	sh.nvfun.nofree = 1;
 	sh.var_base = sh.var_tree = sh_inittree(shtab_variables);
-	SHLVL->nvalue.ip = &shlvl;
+	SHLVL->nvalue.lp = &sh.shlvl;
 	ip->IFS_init.hdr.disc = &IFS_disc;
 	ip->PATH_init.disc = &RESTRICTED_disc;
 	ip->PATH_init.nofree = 1;
